# InstantReplay

./: .gitignore  CLAUDE.md  README.md  program.md
InstantReplay/: CameraManager.swift  CameraPreviewView.swift  CaptureConstants.swift  ContentView.swift  InstantReplayApp.swift  PoseEstimator.swift  SkeletonOverlayView.swift
InstantReplay.xcodeproj/: project.pbxproj
InstantReplay/App/: ContentView.swift  DebugLog.swift  InstantReplayApp.swift
InstantReplay/Capture/: CameraManager.swift  CameraPiPView.swift  CameraPreviewView.swift  CaptureConstants.swift  ClipExtractor.swift  ReplayPlayerView.swift  RollingBufferManager.swift  SegmentWriter.swift  VideoFileProcessor.swift  VideoPiPView.swift  VideoPreviewView.swift
InstantReplay/Detection/: ApproachDetectorStateMachine.swift  BodyTracker.swift  DetectionPipeline.swift  MovementDetector.swift  PoseEstimator.swift
InstantReplay/Overlay/: DebugConsoleView.swift  PlaybackControlsView.swift  SkeletonOverlayView.swift
InstantReplayMacTests/: ReplayDetectionTests.swift  StepDetectionTests.swift  ThresholdTuningTests.swift  VideoPlaybackSpeedTests.swift
InstantReplayMacTests/Resources/: IMG_1118.json  IMG_1940.json  IMG_1940.poses.json  IMG_1988.json  IMG_1988.poses.json  (+4 more)
InstantReplayTests/: PoseCaptureTests.swift
pose_estimation_eval/: MODEL_RESEARCH.md  README.md  ground_truth.py  pyproject.toml
pose_estimation_eval/models/: __init__.py  base.py  mediapipe_blazepose.py  movenet.py  rtmpose.py  yolo_pose.py
pose_estimation_eval/tests/: conftest.py  test_ground_truth_loading.py  test_model_comparison.py
(+17 files in other folders)
